@@ -1,3 +1,7 @@
+2004-12-08  Per Bothner  <per@bothner.com>
+
+	* gui.scm (process-keywords): New function.  Use where needed.
+
 2004-07-11  Chris Dean  <ctdean@sokitomi.com>
 
 	* srfi1.scm: Many functions written to be tail recursive.
